campaign maps now include geolocation, ios top bar miscolored, notification top right icon relaigned better and shrunk, ios campaigns/index auto-push view bug hopefully fixed

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,6 +36,10 @@ $colors: (
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
+$toolbar-background: #000000;
+$toolbar-border-color: #000000 !default;
+$toolbar-active-color: #000000 !default;
+
 
 
 
