--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,7 +21,7 @@ ion-header {
 }
 
 div.toolbar-background-md {
-	background-color: black;
+	background-color: $toolbar-background;
 	color: white;
 }
 div.toolbar-title-md {
