--- a/src/pages/components/entity-view.html
+++ b/src/pages/components/entity-view.html
@@ -46,22 +46,26 @@
   	color: white;
   	text-align: center;
   }
+  .nfheader {
+  	font-weight: bold;
+  	padding: 5px;
+  }
 </style>
 
 
 <div>
 
 	<ion-card *ngIf="completionmessage">
-		<ion-card-header style="background-color: green;">
+		<div class='nfheader' style="background-color: green;">
 			<h1 style="color:white">Task complete! All records have been saved to the database. </h1>
-		</ion-card-header>
+		</div>
 	</ion-card>
 
 	<ng-container *ngFor="let nf of need_fulfillments">
 		<ion-card>
-			<ion-card-header style="background-color: red;">
+			<div class='nfheader' style="background-color: red;">
 				<h1 style="color:white">You are providing {{ nf.need.need_type.name }}!</h1>
-			</ion-card-header>
+			</div>
 
 			<ion-card-content style='text-align: center; padding-top: 25px;'>
 				<div *ngFor="let psm of nf.pipeline_stage_members">
